force-app/main/default/objects/ssot__MailLetter__dlm/fields/ssot__DeliveryAddressCityName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryAddressCityName__c</fullName>
    <label>Delivery Address City Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryAddressCityName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>