force-app/main/default/objects/ssot__MailLetter__dlm/fields/ssot__DeliveryAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryAddressPostalCode__c</fullName>
    <label>Delivery Address Postal Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryAddressPostalCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>